Archive2/0f/8dd510fefbf4da/output
main.cpp: In function 'int main()':
main.cpp:9:9: error: expected ',' or ';' before 's'
         s.erase(std::remove(s.begin(), s.end(), c), s.end());
         ^
main.cpp:8:14: warning: unused variable 'c' [-Wunused-variable]
         char c = s[0]
              ^
